infra/traefik/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
  namespace: traefik
spec:
  headers:
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: allow-lan
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - ${LAN_NETWORK_RANGE}
      - ${LAN_NETWORK_RANGE_V6}
      - ${POD_NETWORK_RANGE}
