infra/traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.local.${BASE_DOMAIN}`)
    middlewares:
    - name: allow-lan-only@file
    - name: forward-auth
      namespace: traefik
    services:
    - kind: TraefikService
      name: api@internal
